Release 1.21.5-pre1 (snapshot)